// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination render should render correctly - no data 1`] = `null`;

exports[`Pagination render should render correctly - with no access 1`] = `
<div
  class="pf-c-pagination"
  data-ouia-component-id="OUIA-Generated-Pagination-top-2"
  data-ouia-component-type="PF4/Pagination"
  data-ouia-safe="true"
  id="pagination-options-menu-1"
>
  <div
    class="pf-c-pagination__total-items"
  >
    <b>
      0 - 0
    </b>
     of 
    <b>
      0
    </b>
     
  </div>
  <div
    class="pf-c-options-menu pf-m-top"
    data-ouia-component-type="PF4/PaginationOptionsMenu"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-options-menu__toggle pf-m-disabled pf-m-plain pf-m-text"
    >
      <span
        class="pf-c-options-menu__toggle-text"
      >
        <b>
          0 - 0
        </b>
         of 
        <b>
          0
        </b>
         
      </span>
      <button
        aria-expanded="false"
        aria-label="Items per page"
        class="  pf-c-options-menu__toggle-button"
        data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        disabled=""
        id="pagination-options-menu-toggle-1"
        type="button"
      >
        <span
          class="pf-c-options-menu__toggle-button-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align:-0.125em"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <nav
    aria-label="Pagination"
    class="pf-c-pagination__nav"
  >
    <div
      class="pf-c-pagination__nav-control pf-m-first"
    >
      <button
        aria-disabled="true"
        aria-label="Go to first page"
        class="pf-c-button pf-m-plain pf-m-disabled"
        data-action="first"
        data-ouia-component-id="OUIA-Generated-Button-plain-5"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
          />
        </svg>
      </button>
    </div>
    <div
      class="pf-c-pagination__nav-control"
    >
      <button
        aria-disabled="true"
        aria-label="Go to previous page"
        class="pf-c-button pf-m-plain pf-m-disabled"
        data-action="previous"
        data-ouia-component-id="OUIA-Generated-Button-plain-6"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          />
        </svg>
      </button>
    </div>
    <div
      class="pf-c-pagination__nav-page-select"
    >
      <input
        aria-label="Current page"
        class="pf-c-form-control"
        disabled=""
        max="0"
        min="1"
        type="number"
        value="0"
      />
      <span
        aria-hidden="true"
      >
        of 0
      </span>
    </div>
    <div
      class="pf-c-pagination__nav-control"
    >
      <button
        aria-disabled="true"
        aria-label="Go to next page"
        class="pf-c-button pf-m-plain pf-m-disabled"
        data-action="next"
        data-ouia-component-id="OUIA-Generated-Button-plain-7"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          />
        </svg>
      </button>
    </div>
    <div
      class="pf-c-pagination__nav-control pf-m-last"
    >
      <button
        aria-disabled="true"
        aria-label="Go to last page"
        class="pf-c-button pf-m-plain pf-m-disabled"
        data-action="last"
        data-ouia-component-id="OUIA-Generated-Button-plain-8"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
          />
        </svg>
      </button>
    </div>
  </nav>
</div>
`;

exports[`Pagination render should render correctly with data 1`] = `
<div
  class="pf-c-pagination"
  data-ouia-component-id="OUIA-Generated-Pagination-top-1"
  data-ouia-component-type="PF4/Pagination"
  data-ouia-safe="true"
  id="pagination-options-menu-0"
>
  <div
    class="pf-c-pagination__total-items"
  >
    <b>
      0 - 0
    </b>
     of 
    <b>
      0
    </b>
     
  </div>
  <div
    class="pf-c-options-menu pf-m-top"
    data-ouia-component-type="PF4/PaginationOptionsMenu"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
    >
      <span
        class="pf-c-options-menu__toggle-text"
      >
        <b>
          0 - 0
        </b>
         of 
        <b>
          0
        </b>
         
      </span>
      <button
        aria-expanded="false"
        aria-label="Items per page"
        class="  pf-c-options-menu__toggle-button"
        data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        disabled=""
        id="pagination-options-menu-toggle-0"
        type="button"
      >
        <span
          class="pf-c-options-menu__toggle-button-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align:-0.125em"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <nav
    aria-label="Pagination"
    class="pf-c-pagination__nav"
  >
    <div
      class="pf-c-pagination__nav-control pf-m-first"
    >
      <button
        aria-disabled="true"
        aria-label="Go to first page"
        class="pf-c-button pf-m-plain pf-m-disabled"
        data-action="first"
        data-ouia-component-id="OUIA-Generated-Button-plain-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
          />
        </svg>
      </button>
    </div>
    <div
      class="pf-c-pagination__nav-control"
    >
      <button
        aria-disabled="true"
        aria-label="Go to previous page"
        class="pf-c-button pf-m-plain pf-m-disabled"
        data-action="previous"
        data-ouia-component-id="OUIA-Generated-Button-plain-2"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          />
        </svg>
      </button>
    </div>
    <div
      class="pf-c-pagination__nav-page-select"
    >
      <input
        aria-label="Current page"
        class="pf-c-form-control"
        disabled=""
        max="0"
        min="1"
        type="number"
        value="0"
      />
      <span
        aria-hidden="true"
      >
        of 0
      </span>
    </div>
    <div
      class="pf-c-pagination__nav-control"
    >
      <button
        aria-disabled="true"
        aria-label="Go to next page"
        class="pf-c-button pf-m-plain pf-m-disabled"
        data-action="next"
        data-ouia-component-id="OUIA-Generated-Button-plain-3"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          />
        </svg>
      </button>
    </div>
    <div
      class="pf-c-pagination__nav-control pf-m-last"
    >
      <button
        aria-disabled="true"
        aria-label="Go to last page"
        class="pf-c-button pf-m-plain pf-m-disabled"
        data-action="last"
        data-ouia-component-id="OUIA-Generated-Button-plain-4"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
          />
        </svg>
      </button>
    </div>
  </nav>
</div>
`;

exports[`Pagination render should render correctly with data and isFull 1`] = `
<div
  class="pf-c-pagination pf-m-bottom"
  data-ouia-component-id="OUIA-Generated-Pagination-bottom-1"
  data-ouia-component-type="PF4/Pagination"
  data-ouia-safe="true"
  id="pagination-options-menu-3"
>
  <div
    class="pf-c-options-menu pf-m-top"
    data-ouia-component-type="PF4/PaginationOptionsMenu"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
    >
      <span
        class="pf-c-options-menu__toggle-text"
      >
        <b>
          1 - 50
        </b>
         of 
        <b>
          500
        </b>
         
      </span>
      <button
        aria-expanded="false"
        aria-label="Items per page"
        class="  pf-c-options-menu__toggle-button"
        data-ouia-component-id="OUIA-Generated-DropdownToggle-4"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        id="pagination-options-menu-toggle-3"
        type="button"
      >
        <span
          class="pf-c-options-menu__toggle-button-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align:-0.125em"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <nav
    aria-label="Pagination"
    class="pf-c-pagination__nav"
  >
    <div
      class="pf-c-pagination__nav-control pf-m-first"
    >
      <button
        aria-disabled="true"
        aria-label="Go to first page"
        class="pf-c-button pf-m-plain pf-m-disabled"
        data-action="first"
        data-ouia-component-id="OUIA-Generated-Button-plain-13"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
          />
        </svg>
      </button>
    </div>
    <div
      class="pf-c-pagination__nav-control"
    >
      <button
        aria-disabled="true"
        aria-label="Go to previous page"
        class="pf-c-button pf-m-plain pf-m-disabled"
        data-action="previous"
        data-ouia-component-id="OUIA-Generated-Button-plain-14"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          />
        </svg>
      </button>
    </div>
    <div
      class="pf-c-pagination__nav-page-select"
    >
      <input
        aria-label="Current page"
        class="pf-c-form-control"
        max="10"
        min="1"
        type="number"
        value="1"
      />
      <span
        aria-hidden="true"
      >
        of 10
      </span>
    </div>
    <div
      class="pf-c-pagination__nav-control"
    >
      <button
        aria-disabled="false"
        aria-label="Go to next page"
        class="pf-c-button pf-m-plain"
        data-action="next"
        data-ouia-component-id="OUIA-Generated-Button-plain-15"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          />
        </svg>
      </button>
    </div>
    <div
      class="pf-c-pagination__nav-control pf-m-last"
    >
      <button
        aria-disabled="false"
        aria-label="Go to last page"
        class="pf-c-button pf-m-plain"
        data-action="last"
        data-ouia-component-id="OUIA-Generated-Button-plain-16"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
          />
        </svg>
      </button>
    </div>
  </nav>
</div>
`;

exports[`Pagination render should render correctly with data and props 1`] = `
<div
  class="pf-c-pagination"
  data-ouia-component-id="OUIA-Generated-Pagination-top-3"
  data-ouia-component-type="PF4/Pagination"
  data-ouia-safe="true"
  id="pagination-options-menu-2"
>
  <div
    class="pf-c-pagination__total-items"
  >
    <b>
      1 - 50
    </b>
     of 
    <b>
      500
    </b>
     
  </div>
  <div
    class="pf-c-options-menu pf-m-top"
    data-ouia-component-type="PF4/PaginationOptionsMenu"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
    >
      <span
        class="pf-c-options-menu__toggle-text"
      >
        <b>
          1 - 50
        </b>
         of 
        <b>
          500
        </b>
         
      </span>
      <button
        aria-expanded="false"
        aria-label="Items per page"
        class="  pf-c-options-menu__toggle-button"
        data-ouia-component-id="OUIA-Generated-DropdownToggle-3"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        id="pagination-options-menu-toggle-2"
        type="button"
      >
        <span
          class="pf-c-options-menu__toggle-button-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align:-0.125em"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <nav
    aria-label="Pagination"
    class="pf-c-pagination__nav"
  >
    <div
      class="pf-c-pagination__nav-control pf-m-first"
    >
      <button
        aria-disabled="true"
        aria-label="Go to first page"
        class="pf-c-button pf-m-plain pf-m-disabled"
        data-action="first"
        data-ouia-component-id="OUIA-Generated-Button-plain-9"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
          />
        </svg>
      </button>
    </div>
    <div
      class="pf-c-pagination__nav-control"
    >
      <button
        aria-disabled="true"
        aria-label="Go to previous page"
        class="pf-c-button pf-m-plain pf-m-disabled"
        data-action="previous"
        data-ouia-component-id="OUIA-Generated-Button-plain-10"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          />
        </svg>
      </button>
    </div>
    <div
      class="pf-c-pagination__nav-page-select"
    >
      <input
        aria-label="Current page"
        class="pf-c-form-control"
        max="10"
        min="1"
        type="number"
        value="1"
      />
      <span
        aria-hidden="true"
      >
        of 10
      </span>
    </div>
    <div
      class="pf-c-pagination__nav-control"
    >
      <button
        aria-disabled="false"
        aria-label="Go to next page"
        class="pf-c-button pf-m-plain"
        data-action="next"
        data-ouia-component-id="OUIA-Generated-Button-plain-11"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          />
        </svg>
      </button>
    </div>
    <div
      class="pf-c-pagination__nav-control pf-m-last"
    >
      <button
        aria-disabled="false"
        aria-label="Go to last page"
        class="pf-c-button pf-m-plain"
        data-action="last"
        data-ouia-component-id="OUIA-Generated-Button-plain-12"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
          />
        </svg>
      </button>
    </div>
  </nav>
</div>
`;
